# w2_image_classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: api.py  config.yaml  eval.py  train.py
src/data/: datamodule.py
src/models/: model.py
