[tool.poetry]
name = "w2-image-classifier"
version = "0.1.0"
description = "Image classifier model with API for new inferences"
authors = ["henrique.oliveira <henriquecon1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.1"
scikit-learn = "^1.7.0"
matplotlib = "^3.10.3"
pyyaml = "^6.0.2"
torch = "^2.7.1"
torchvision = "^0.22.1"
pytorch-lightning = "^2.5.2"
tensorboard = "^2.19.0"
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
python-multipart = "^0.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
